# ai-code-survey

./: .gitignore  README.md  README_CN.md
argument-code/: README.md  package.json  test-basic.js
argument-code/examples/: development.json  system.json
argument-code/src/: index.ts  server.ts
argument-code/tests/: config-parser.test.ts  security.test.ts  single-command.test.ts
augment-code/: CHANGELOG.md  PROJECT_STATUS.md  jest.config.js  package-lock.json  tsconfig.json
augment-code/examples/: config.json  demo.sh
blog/: blog.md
claude-code-sonnet-4/: .eslintrc.cjs  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
claude-code-sonnet-4/.claude/: settings.local.json
claude-code-sonnet-4/ai/: code.txt
claude-code-sonnet-4/src/: index.ts  (+1 more)
cline-opus-4/: .gitignore  LICENSE  README.md  SUMMARY.md  package-lock.json  package.json  tsconfig.json
codex-20250607/: README.md  package-lock.json  package.json  tsconfig.json
codex-cli-auto/: codex-cli.txt  prompt.txt
codex-cli-auto/shell-mcp/: README.md  pyproject.toml
codex-cli-auto/shell-mcp/.github/workflows/: ci.yml
codex-cli-auto/shell-mcp/docs/: architecture.md
codex-cli-auto/shell-mcp/shell_mcp/: __init__.py  cli.py  config.py  log.py  repl.py  runner.py  validator.py
codex-cli-auto/shell-mcp/tests/: test_config.py  test_repl.py  test_runner.py  test_validator.py
cursor-auto/: README.md  package-lock.json  package.json  tsconfig.json
github-copilot-gpt41/: README.md  jest.config.js  package-lock.json  package.json
(+74 files in other folders)
